thesis-cluster-public/resources/namespaced/networkpolicies.networking.k8s.io.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"labels":{"app.kubernetes.io/component":"alert-router","app.kubernetes.io/instance":"main","app.kubernetes.io/name":"alertmanager","app.kubernetes.io/part-of":"kube-prometheus","app.kubernetes.io/version":"0.28.0"},"name":"alertmanager-main","namespace":"monitoring"},"spec":{"egress":[{}],"ingress":[{"from":[{"podSelector":{"matchLabels":{"app.kubernetes.io/name":"prometheus"}}}],"ports":[{"port":909 [...]
    creationTimestamp: "2025-03-19T22:24:18Z"
    generation: 1
    labels:
      app.kubernetes.io/component: alert-router
      app.kubernetes.io/instance: main
      app.kubernetes.io/name: alertmanager
      app.kubernetes.io/part-of: kube-prometheus
      app.kubernetes.io/version: 0.28.0
    name: alertmanager-main
    namespace: monitoring
    resourceVersion: "2709"
    uid: 10fbadb9-00a3-4a6b-baf2-f24521fa7a18
  spec:
    egress:
    - {}
    ingress:
    - from:
      - podSelector:
          matchLabels:
            app.kubernetes.io/name: prometheus
      ports:
      - port: 9093
        protocol: TCP
      - port: 8080
        protocol: TCP
    - from:
      - podSelector:
          matchLabels:
            app.kubernetes.io/name: alertmanager
      ports:
      - port: 9094
        protocol: TCP
      - port: 9094
        protocol: UDP
    podSelector:
      matchLabels:
        app.kubernetes.io/component: alert-router
        app.kubernetes.io/instance: main
        app.kubernetes.io/name: alertmanager
        app.kubernetes.io/part-of: kube-prometheus
    policyTypes:
    - Egress
    - Ingress
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"labels":{"app.kubernetes.io/component":"exporter","app.kubernetes.io/name":"blackbox-exporter","app.kubernetes.io/part-of":"kube-prometheus","app.kubernetes.io/version":"0.25.0"},"name":"blackbox-exporter","namespace":"monitoring"},"spec":{"egress":[{}],"ingress":[{"from":[{"podSelector":{"matchLabels":{"app.kubernetes.io/name":"prometheus"}}}],"ports":[{"port":9115,"protocol":"TCP"},{"port":19115," [...]
    creationTimestamp: "2025-03-19T22:24:18Z"
    generation: 1
    labels:
      app.kubernetes.io/component: exporter
      app.kubernetes.io/name: blackbox-exporter
      app.kubernetes.io/part-of: kube-prometheus
      app.kubernetes.io/version: 0.25.0
    name: blackbox-exporter
    namespace: monitoring
    resourceVersion: "2727"
    uid: cfaabb94-1b5d-4e1d-b8a6-d5d2aabaeed6
  spec:
    egress:
    - {}
    ingress:
    - from:
      - podSelector:
          matchLabels:
            app.kubernetes.io/name: prometheus
      ports:
      - port: 9115
        protocol: TCP
      - port: 19115
        protocol: TCP
    podSelector:
      matchLabels:
        app.kubernetes.io/component: exporter
        app.kubernetes.io/name: blackbox-exporter
        app.kubernetes.io/part-of: kube-prometheus
    policyTypes:
    - Egress
    - Ingress
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"labels":{"app.kubernetes.io/component":"grafana","app.kubernetes.io/name":"grafana","app.kubernetes.io/part-of":"kube-prometheus","app.kubernetes.io/version":"11.5.2"},"name":"grafana","namespace":"monitoring"},"spec":{"egress":[{}],"ingress":[{"from":[{"podSelector":{"matchLabels":{"app.kubernetes.io/name":"prometheus"}}}],"ports":[{"port":3000,"protocol":"TCP"}]},{"from":[{"ipBlock":{"cidr":"192.1 [...]
    creationTimestamp: "2025-03-19T22:24:20Z"
    generation: 2
    labels:
      app.kubernetes.io/component: grafana
      app.kubernetes.io/name: grafana
      app.kubernetes.io/part-of: kube-prometheus
      app.kubernetes.io/version: 11.5.2
    name: grafana
    namespace: monitoring
    resourceVersion: "16794"
    uid: e83203c5-bcae-43be-900c-e699bf1ca10b
  spec:
    egress:
    - {}
    ingress:
    - from:
      - podSelector:
          matchLabels:
            app.kubernetes.io/name: prometheus
      ports:
      - port: 3000
        protocol: TCP
    - from:
      - ipBlock:
          cidr: 192.168.1.0/24
      - ipBlock:
          cidr: 10.42.0.0/16
    podSelector:
      matchLabels:
        app.kubernetes.io/component: grafana
        app.kubernetes.io/name: grafana
        app.kubernetes.io/part-of: kube-prometheus
    policyTypes:
    - Egress
    - Ingress
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"labels":{"app.kubernetes.io/component":"exporter","app.kubernetes.io/name":"kube-state-metrics","app.kubernetes.io/part-of":"kube-prometheus","app.kubernetes.io/version":"2.15.0"},"name":"kube-state-metrics","namespace":"monitoring"},"spec":{"egress":[{}],"ingress":[{"from":[{"podSelector":{"matchLabels":{"app.kubernetes.io/name":"prometheus"}}}],"ports":[{"port":8443,"protocol":"TCP"},{"port":9443, [...]
    creationTimestamp: "2025-03-19T22:24:21Z"
    generation: 1
    labels:
      app.kubernetes.io/component: exporter
      app.kubernetes.io/name: kube-state-metrics
      app.kubernetes.io/part-of: kube-prometheus
      app.kubernetes.io/version: 2.15.0
    name: kube-state-metrics
    namespace: monitoring
    resourceVersion: "2819"
    uid: f8189542-3422-45f0-8707-02811001b87c
  spec:
    egress:
    - {}
    ingress:
    - from:
      - podSelector:
          matchLabels:
            app.kubernetes.io/name: prometheus
      ports:
      - port: 8443
        protocol: TCP
      - port: 9443
        protocol: TCP
    podSelector:
      matchLabels:
        app.kubernetes.io/component: exporter
        app.kubernetes.io/name: kube-state-metrics
        app.kubernetes.io/part-of: kube-prometheus
    policyTypes:
    - Egress
    - Ingress
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"labels":{"app.kubernetes.io/component":"exporter","app.kubernetes.io/name":"node-exporter","app.kubernetes.io/part-of":"kube-prometheus","app.kubernetes.io/version":"1.9.0"},"name":"node-exporter","namespace":"monitoring"},"spec":{"egress":[{}],"ingress":[{"from":[{"podSelector":{"matchLabels":{"app.kubernetes.io/name":"prometheus"}}}],"ports":[{"port":9100,"protocol":"TCP"}]}],"podSelector":{"match [...]
    creationTimestamp: "2025-03-19T22:24:21Z"
    generation: 1
    labels:
      app.kubernetes.io/component: exporter
      app.kubernetes.io/name: node-exporter
      app.kubernetes.io/part-of: kube-prometheus
      app.kubernetes.io/version: 1.9.0
    name: node-exporter
    namespace: monitoring
    resourceVersion: "2853"
    uid: be4fbb31-2791-40f9-bbcb-8fcca4e86b2b
  spec:
    egress:
    - {}
    ingress:
    - from:
      - podSelector:
          matchLabels:
            app.kubernetes.io/name: prometheus
      ports:
      - port: 9100
        protocol: TCP
    podSelector:
      matchLabels:
        app.kubernetes.io/component: exporter
        app.kubernetes.io/name: node-exporter
        app.kubernetes.io/part-of: kube-prometheus
    policyTypes:
    - Egress
    - Ingress
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"labels":{"app.kubernetes.io/component":"metrics-adapter","app.kubernetes.io/name":"prometheus-adapter","app.kubernetes.io/part-of":"kube-prometheus","app.kubernetes.io/version":"0.12.0"},"name":"prometheus-adapter","namespace":"monitoring"},"spec":{"egress":[{}],"ingress":[{}],"podSelector":{"matchLabels":{"app.kubernetes.io/component":"metrics-adapter","app.kubernetes.io/name":"prometheus-adapter", [...]
    creationTimestamp: "2025-03-19T22:24:23Z"
    generation: 1
    labels:
      app.kubernetes.io/component: metrics-adapter
      app.kubernetes.io/name: prometheus-adapter
      app.kubernetes.io/part-of: kube-prometheus
      app.kubernetes.io/version: 0.12.0
    name: prometheus-adapter
    namespace: monitoring
    resourceVersion: "2936"
    uid: cdb26b86-06dc-42e6-a299-a2fc0181902b
  spec:
    egress:
    - {}
    ingress:
    - {}
    podSelector:
      matchLabels:
        app.kubernetes.io/component: metrics-adapter
        app.kubernetes.io/name: prometheus-adapter
        app.kubernetes.io/part-of: kube-prometheus
    policyTypes:
    - Egress
    - Ingress
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"labels":{"app.kubernetes.io/component":"prometheus","app.kubernetes.io/instance":"k8s","app.kubernetes.io/name":"prometheus","app.kubernetes.io/part-of":"kube-prometheus","app.kubernetes.io/version":"3.2.0"},"name":"prometheus-k8s","namespace":"monitoring"},"spec":{"egress":[{}],"ingress":[{"from":[{"podSelector":{"matchLabels":{"app.kubernetes.io/name":"prometheus"}}}],"ports":[{"port":9090,"protoc [...]
    creationTimestamp: "2025-03-19T22:24:22Z"
    generation: 3
    labels:
      app.kubernetes.io/component: prometheus
      app.kubernetes.io/instance: k8s
      app.kubernetes.io/name: prometheus
      app.kubernetes.io/part-of: kube-prometheus
      app.kubernetes.io/version: 3.2.0
    name: prometheus-k8s
    namespace: monitoring
    resourceVersion: "226847"
    uid: 3e3c836b-3a93-40b7-94f3-24884c1bc33f
  spec:
    egress:
    - {}
    ingress:
    - from:
      - podSelector:
          matchLabels:
            app.kubernetes.io/name: prometheus
      ports:
      - port: 9090
        protocol: TCP
      - port: 8080
        protocol: TCP
    - from:
      - podSelector:
          matchLabels:
            app.kubernetes.io/name: grafana
      ports:
      - port: 9090
        protocol: TCP
    - from:
      - ipBlock:
          cidr: 192.168.1.0/24
      - ipBlock:
          cidr: 10.42.0.0/16
    podSelector:
      matchLabels:
        app.kubernetes.io/component: prometheus
        app.kubernetes.io/instance: k8s
        app.kubernetes.io/name: prometheus
        app.kubernetes.io/part-of: kube-prometheus
    policyTypes:
    - Egress
    - Ingress
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"labels":{"app.kubernetes.io/component":"controller","app.kubernetes.io/name":"prometheus-operator","app.kubernetes.io/part-of":"kube-prometheus","app.kubernetes.io/version":"0.80.1"},"name":"prometheus-operator","namespace":"monitoring"},"spec":{"egress":[{}],"ingress":[{"from":[{"podSelector":{"matchLabels":{"app.kubernetes.io/name":"prometheus"}}}],"ports":[{"port":8443,"protocol":"TCP"}]}],"podSe [...]
    creationTimestamp: "2025-03-19T22:24:23Z"
    generation: 1
    labels:
      app.kubernetes.io/component: controller
      app.kubernetes.io/name: prometheus-operator
      app.kubernetes.io/part-of: kube-prometheus
      app.kubernetes.io/version: 0.80.1
    name: prometheus-operator
    namespace: monitoring
    resourceVersion: "2977"
    uid: 2c4d26e4-c723-4124-9219-5154f384a41b
  spec:
    egress:
    - {}
    ingress:
    - from:
      - podSelector:
          matchLabels:
            app.kubernetes.io/name: prometheus
      ports:
      - port: 8443
        protocol: TCP
    podSelector:
      matchLabels:
        app.kubernetes.io/component: controller
        app.kubernetes.io/name: prometheus-operator
        app.kubernetes.io/part-of: kube-prometheus
    policyTypes:
    - Egress
    - Ingress
kind: List
metadata:
  resourceVersion: ""
